--- a/index.html
+++ b/index.html
@@ -4,21 +4,170 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Candy Shop Cine Oeste</title>
+    <!--CSS Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--Link CSS-->
+    <link rel="stylesheet" href="styles/styles.css">
+    <!--Link Fonts Google-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet">
+    <title>Candy Shop</title>
 </head>
 
-<body>
-    <h2>¡Bienvenido a nuestra tienda de golosinas y snacks!</h2>
+<body class="container-fluid">
+    <header>
+        <h1 class="text-center mt-4 main-title">CANDY SHOP</h1>
+    </header>
 
-    <p>Acá encontrarás una deliciosa variedad de dulces, comidas y
-        bebidas que harán que tu día sea más sabroso.</p>
-    <p>Navega por nuestra amplia selección, descubre tus favoritos y disfruta de una experiencia de compra fácil y
-        divertida. ¡Prepárate para satisfacer tus antojos!</p>
+    <main>
+        <h2 class="text-center my-4">Productos</h2>
+        <div class="row">
+            <div class="col-9">
+                <div class="row row-cols-1 row-cols-md-4 g-4">
+                    <div class="col">
+                        <div class="card body-card">
+                            <img src="assets/coca-zero.png" class="img-shop card-img-top" alt="coca-zero">
+                            <div class="card-body">
+                                <h3 class="card-title">Coca Cola Zero</h3>
+                                <p class="card-text">$ 1000</p>
+                                <div class="input-group align-items-center">
+                                    <button class="m-2 btn-minus"><i class="fa-solid fa-minus"></i></button>
+                                    <input type="number" class="form-control text-center"></input>
+                                    <button class="m-2 btn-plus"><i class="fa-solid fa-plus"></i></button>
+                                    <button class="btn m-2"><i class="fa-solid fa-trash"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card body-card">
+                            <img src="assets/coca.png" class="img-shop card-img-top" alt="Coca Cola">
+                            <div class="card-body">
+                                <h3 class="card-title">Coca Cola</h3>
+                                <p class="card-text">$ 1000</p>
+                                <a href="#" class="d-block btn btn-warning">Agregar al carrito</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card body-card">
+                            <img src="assets/sprite.png" class="img-shop card-img-top" alt="Sprite">
+                            <div class="card-body">
+                                <h3 class="card-title">Sprite</h3>
+                                <p class="card-text">$ 1000</p>
+                                <a href="#" class="d-block btn btn-warning">Agregar al carrito</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card body-card">
+                            <img src="assets/nachos.png" class="p-2 img-shop card-img-top" alt="Nachos">
+                            <div class="card-body">
+                                <h3 class="card-title">Nachos</h3>
+                                <p class="card-text">$ 2000</p>
+                                <a href="#" class="d-block btn btn-warning">Agregar al carrito</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card body-card">
+                            <img src="assets/hamburguesa.png" class="img-shop card-img-top" alt="Hamburguesa">
+                            <div class="card-body">
+                                <h3 class="card-title">Hamburguesa</h3>
+                                <p class="card-text">$ 2000</p>
+                                <a href="#" class="d-block btn btn-warning">Agregar al carrito</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card body-card">
+                            <img src="assets/pochoclo.png" class="img-shop card-img-top" alt="Pochoclos">
+                            <div class="card-body">
+                                <h3 class="card-title">Pochoclos</h3>
+                                <p class="card-text">$ 2000</p>
+                                <a href="#" class="d-block btn btn-warning">Agregar al carrito</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-    <p>Muchas gracias por elegirnos!</p>
-    <script src="js/candy-shop.js"></script>
+            <div class="col-3 ticket d-flex flex-column justify-content-between">
+                <div>
+                    <div class="d-flex justify-content-center align-items-center mt-3">
+                        <h2 class="d-inline me-3">Mi carrito</h2>
+                        <i class="fa-solid fa-cart-shopping"></i>
+                    </div>
+
+                    <p class="text-center m-3">Tu carrito está vacío!</p>
+
+                    <div>
+                        <div class="row m-1">
+                            <img src="assets/coca-zero.png" class="img-cart col-4" alt="Coca Cola Zero">
+                            <div class="col-8">
+                                <h3>Coca Cola Zero</h3>
+                                <p>$ 1000</p>
+                                <div class="input-group align-items-center">
+                                    <button class="m-2 btn-minus"><i class="fa-solid fa-minus"></i></button>
+                                    <input type="number" class="form-control text-center"></input>
+                                    <button class="m-2 btn-plus"><i class="fa-solid fa-plus"></i></button>
+                                    <button class="btn m-2"><i class="fa-solid fa-trash"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row m-1">
+                            <img src="assets/coca.png" class="img-cart col-4" alt="Coca Cola">
+                            <div class="col-8">
+                                <h3>Coca Cola</h3>
+                                <p>$ 1000</p>
+                                <div class="input-group align-items-center">
+                                    <button class="m-2 btn-minus"><i class="fa-solid fa-minus"></i></button>
+                                    <input type="number" class="form-control text-center"></input>
+                                    <button class="m-2 btn-plus"><i class="fa-solid fa-plus"></i></button>
+                                    <button class="btn m-2"><i class="fa-solid fa-trash"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row m-1">
+                            <img src="assets/nachos.png" class="img-cart col-4" alt="Nachos">
+                            <div class="col-8">
+                                <h3>Nachos</h3>
+                                <p>$ 2000</p>
+                                <div class="input-group align-items-center">
+                                    <button class="m-2 btn-minus"><i class="fa-solid fa-minus"></i></button>
+                                    <input type="number" class="form-control text-center"></input>
+                                    <button class="m-2 btn-plus"><i class="fa-solid fa-plus"></i></button>
+                                    <button class="btn m-2"><i class="fa-solid fa-trash"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex justify-content-between mt-4">
+                        <h4>Tu total es:</h4>
+                        <div class="text-end me-5 fw-bolder fs-5">$ 4000</div>
+                    </div>
+                </div>
+
+                <div>
+                    <button class="w-100 btn btn-danger mb-3">Vaciar carrito</button>
+                </div>
+            </div>
+        </div>
     </main>
 
+    <footer>
+        <p>Muchas gracias por elegirnos!</p>
+    </footer>
+
+    <!--Script Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <!--Script Iconos-->
+    <script src="https://kit.fontawesome.com/8d7d588bcd.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
