--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
                     <div id="containerOfItems">
                     </div>
 
-                    <div class="d-flex justify-content-between mt-4">
-                        <h4>Tu total es: $</h4>
-                        <div class="text-end me-5 fw-bolder fs-5" id="precioTotalCarrito">0</div>
+                    <div class="d-flex justify-content-between mt-4" id="contenedorPrecioTotalCarrito">
                     </div>
                 </div>
 
