agrego funcionalidad a los botones mi carrito

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2 class="text-center my-4">Productos</h2>
         <div class="row">
             <div class="col-9">
-                <div class="row row-cols-1 row-cols-md-4 g-4" id="containerOfProductos">
+                <div class="row row-cols-1 row-cols-md-4 g-4" id="contenedorDeProductos">
                 </div>
             </div>
 
@@ -39,7 +39,7 @@
                     <div id="mensajeCarritoVacio">
                     </div>
 
-                    <div id="containerOfItems">
+                    <div id="contenedorDeItems">
                     </div>
 
                     <div class="d-flex justify-content-between mt-4" id="contenedorPrecioTotalCarrito">
@@ -53,7 +53,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="text-end me-5">
         <p>Muchas gracias por elegirnos!</p>
     </footer>
 
