--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
 <body class="container-fluid">
     <header>
-        <h1 class="text-center mt-4 main-title">CANDY SHOP</h1>
+        <a href="/" class="text-decoration-none text-dark">
+            <h1 class="text-center mt-4 main-title">CANDY SHOP</h1>
+        </a>
         <nav class="navbar">
             <div class="container-fluid justify-content-end">
                 <form class="d-flex" role="search" id="formBuscador">
