realizo último fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="container-fluid">
     <header>
-        <a href="" class="text-decoration-none text-dark">
+        <a href="#" id="linkInicio" class="text-decoration-none text-dark">
             <h1 class="text-center mt-4 main-title">CANDY SHOP</h1>
         </a>
         <nav class="navbar">
